# defuddle-rs

./: .gitignore  Cargo.toml  MCP.md  PARITY.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: mcp-release.yml  pages.yml
app/: app.js  index.html  styles.css
bindings/python/: setup.py
bindings/python/defuddle/: __init__.py  defuddle_rs.py
demo/: NARRATION.md  PLAN.md  agent-driver.ts  candycam-client.ts  candycam_helper.py  config.ts  narration.ts  orchestrate.ts  pyproject.toml  terminal-driver.ts  vscode-driver.ts
demo/output/: recording_started_at  timeline.json  timings.json
demo/scripts/: narration.py  open_agent_terminal.py  record_close_scene.py  record_extension_scene.py  record_hook_scene.py  record_mcp_scene.py  record_segments.py  record_tauri_scene.py  record_vscode_scene.py  reset_demo_state.py  run_demo.py  start_copilot_session.py  synthesize_and_mux.py
extension/: README.md  content-script.js  manifest.json  panel.css  panel.html  panel.js  service-worker.js
extension/wasm/: index.d.ts
ported_code/defuddle/: .gitignore  CLAUDE.md  package-lock.json  tsconfig.declarations.json  tsconfig.node.json  vitest.config.ts
ported_code/defuddle/src/: cli.ts  constants.ts  defuddle.ts  extractor-registry.ts  fetch.ts  index.full.ts  index.ts  markdown.ts  metadata.ts  node.ts  standardize.ts  types.ts  utils.ts
ported_code/defuddle/src/elements/: callouts.ts  code.ts  footnotes.ts  headings.ts  images.ts  math.base.ts  math.core.ts  math.full.ts  math.ts
ported_code/defuddle/src/extractors/: _base.ts  _conversation.ts  bbcode-data.ts  c2-wiki.ts  chatgpt.ts  claude.ts  gemini.ts  github.ts  grok.ts  hackernews.ts  reddit.ts  substack.ts  twitter.ts  x-article.ts  x-oembed.ts  youtube.ts
ported_code/defuddle/src/removals/: content-patterns.ts  hidden.ts  metadata-block.ts  (+3 more)
ported_code/defuddle/tests/: debug.test.ts  fetch.test.ts  fixtures.test.ts  full-bundle.test.ts  helpers.ts  markdown.test.ts  perf.test.ts  proxy.test.ts  reddit-author.test.ts  schema-fallback.test.ts  server.test.ts  x-article-surrogates.test.ts  youtube-transcript.test.ts
ported_code/defuddle/website/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
scripts/: build-extension.mjs  build-pages.mjs
src/: constants.rs  fetch.rs  lib.rs  markdown.rs  mcp.rs  metadata.rs  python_api.rs  removals.rs  scoring.rs  standardize.rs
src/elements/: mod.rs
src/extractors/: github.rs  mod.rs
tests/: defuddle_test.rs  https_fetch_test.rs  mcp_fetch_url_markdown_test.rs  mcp_http_test.rs  mcp_server_test.rs  python_api_test.rs
tests/fixtures/: fasterthanlime.expected.md  fasterthanlime.html  github_tokio.expected.md  github_tokio.html  hackernews.expected.md  hackernews.html  joel_test.expected.md  joel_test.html  mdn_table.expected.md  mdn_table.html  rust_blog.expected.md  rust_blog.html  wikipedia_rust.expected.md  wikipedia_rust.html
tests/wasm-smoke/: index.html  package.json  playwright.config.js  static-server.cjs  wasm.spec.js
(+23 files in other folders)
